fixing alignment

--- a/src/components/guest-details/guest-details-form/guest-details-form.styles.css
+++ b/src/components/guest-details/guest-details-form/guest-details-form.styles.css
@@ -103,6 +103,6 @@
   }
 
   .MuiOutlinedInput-root.MuiInputBase-root.MuiInputBase-colorPrimary.MuiInputBase-formControl {
-    width: 278px !important;
+    width: 335px !important;
   }
 }
