--- a/src/components/payment-method/payment-content/payment-content.styles.css
+++ b/src/components/payment-method/payment-content/payment-content.styles.css
@@ -101,6 +101,6 @@
     max-width: 51% !important;
   }
   .css-1rgu0qh {
-    display: none;
+    display: none !important;
   }
 }
